--- a/index.html
+++ b/index.html
@@ -1,82 +1,224 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <title>Pixel Calculator</title>
 
 <style>
-body{background:#000;margin:0;font-family:-apple-system;color:white}
-.display{background:#2b262b;padding:30px 20px;font-size:40px;border-bottom-left-radius:25px;border-bottom-right-radius:25px;text-align:right}
-.container{padding:10px}
-.row{display:flex;justify-content:space-between;margin:10px 0}
-button{width:70px;height:70px;border-radius:50%;border:none;font-size:22px;color:white;background:#1b1b1b}
-.operator{background:#5c525c}
-.top{background:#4b404b}
-button:active{transform:scale(0.95)}
+html, body {
+  height:100%;
+  margin:0;
+  background:#000;
+  font-family:-apple-system;
+  color:white;
+  touch-action: manipulation;
+  overscroll-behavior:none;
+  -webkit-user-select:none;
+  user-select:none;
+}
+
+.calculator {
+  display:flex;
+  flex-direction:column;
+  height:100vh;
+}
+
+/* DISPLAY */
+
+.display {
+  background:#2b262b;
+  padding:35px 20px 20px 20px;
+  text-align:right;
+  flex:0 0 30%;
+  display:flex;
+  flex-direction:column;
+  justify-content:flex-end;
+}
+
+.mainInput {
+  font-size:46px;
+}
+
+.preview {
+  font-size:28px;
+  opacity:0.7;
+  margin-top:6px;
+}
+
+/* BUTTON AREA */
+
+.keypad {
+  flex:1;
+  display:flex;
+  flex-direction:column;
+  justify-content:space-evenly;
+  padding:8px;
+}
+
+.row {
+  display:flex;
+  justify-content:space-evenly;
+}
+
+button {
+  width:82px;
+  height:82px;
+  border-radius:50%;
+  border:none;
+  font-size:24px;
+  color:white;
+  background:#1b1b1b;
+}
+
+.operator {
+  background:#5c525c;
+}
+
+.top {
+  background:#4b404b;
+}
+
+button:active {
+  transform:scale(0.95);
+}
 </style>
 </head>
 
 <body>
 
-<div class="display" id="input">0</div>
+<div class="calculator">
 
-<div class="container">
+  <div class="display">
+    <div class="mainInput" id="input">0</div>
+    <div class="preview" id="preview"></div>
+  </div>
 
-<div class="row">
-<button class="top" onclick="press('√(')">√</button>
-<button class="top" onclick="press('π')">π</button>
-<button class="top" onclick="press('^')">^</button>
-<button class="top" onclick="press('!')">!</button>
-</div>
+  <div class="keypad">
 
-<div class="row">
-<button class="top" onclick="clearAll()">AC</button>
-<button class="top" onclick="press('(')">(</button>
-<button class="top" onclick="press(')')">)</button>
-<button class="operator" onclick="press('/')">÷</button>
-</div>
+    <div class="row">
+      <button class="top" onclick="press('√(')">√</button>
+      <button class="top" onclick="press('π')">π</button>
+      <button class="top" onclick="press('^')">^</button>
+      <button class="top" onclick="clearAll()">AC</button>
+    </div>
 
-<div class="row">
-<button onclick="press('7')">7</button>
-<button onclick="press('8')">8</button>
-<button onclick="press('9')">9</button>
-<button class="operator" onclick="press('*')">×</button>
-</div>
+    <div class="row">
+      <button class="top" onclick="press('(')">(</button>
+      <button class="top" onclick="press(')')">)</button>
+      <button class="operator" onclick="press('/')">÷</button>
+      <button class="operator" onclick="back()">⌫</button>
+    </div>
 
-<div class="row">
-<button onclick="press('4')">4</button>
-<button onclick="press('5')">5</button>
-<button onclick="press('6')">6</button>
-<button class="operator" onclick="press('-')">−</button>
-</div>
+    <div class="row">
+      <button onclick="press('7')">7</button>
+      <button onclick="press('8')">8</button>
+      <button onclick="press('9')">9</button>
+      <button class="operator" onclick="press('*')">×</button>
+    </div>
 
-<div class="row">
-<button onclick="press('1')">1</button>
-<button onclick="press('2')">2</button>
-<button onclick="press('3')">3</button>
-<button class="operator" onclick="press('+')">+</button>
-</div>
+    <div class="row">
+      <button onclick="press('4')">4</button>
+      <button onclick="press('5')">5</button>
+      <button onclick="press('6')">6</button>
+      <button class="operator" onclick="press('-')">−</button>
+    </div>
 
-<div class="row">
-<button onclick="press('0')">0</button>
-<button onclick="press('.')">.</button>
-<button onclick="back()">⌫</button>
-<button class="operator" onclick="calculate()">=</button>
-</div>
+    <div class="row">
+      <button onclick="press('1')">1</button>
+      <button onclick="press('2')">2</button>
+      <button onclick="press('3')">3</button>
+      <button class="operator" onclick="press('+')">+</button>
+    </div>
+
+    <div class="row">
+      <button onclick="press('0')">0</button>
+      <button onclick="press('.')">.</button>
+      <button class="operator" onclick="calculate()">=</button>
+    </div>
+
+  </div>
 
 </div>
 
 <script>
-let input="";
-function press(v){input+=v;document.getElementById("input").innerText=input}
-function clearAll(){input="";document.getElementById("input").innerText="0"}
-function back(){input=input.slice(0,-1);document.getElementById("input").innerText=input||"0"}
-function calculate(){
-try{
-let exp=input.replace(/π/g,Math.PI).replace(/√/g,"Math.sqrt").replace(/\^/g,"**");
-document.getElementById("input").innerText=eval(exp)
-}catch{document.getElementById("input").innerText="Error"}
+
+let input = "";
+
+/* PRESS */
+
+function press(val){
+  input += val;
+  updateDisplay();
+  liveCalculate();
 }
+
+/* CLEAR */
+
+function clearAll(){
+  input="";
+  updateDisplay();
+  document.getElementById("preview").innerText="";
+}
+
+/* BACKSPACE */
+
+function back(){
+  input = input.slice(0,-1);
+  updateDisplay();
+  liveCalculate();
+}
+
+/* UPDATE MAIN DISPLAY */
+
+function updateDisplay(){
+  document.getElementById("input").innerText = input || "0";
+}
+
+/* IMPLICIT MULTIPLICATION */
+
+function formatExpression(exp){
+  exp = exp.replace(/π/g,Math.PI);
+  exp = exp.replace(/√/g,"Math.sqrt");
+
+  exp = exp.replace(/(\d)\(/g,"$1*(");
+  exp = exp.replace(/\)(\d)/g,")*$1");
+  exp = exp.replace(/(\d)π/g,"$1*Math.PI");
+
+  return exp;
+}
+
+/* LIVE RESULT */
+
+function liveCalculate(){
+  try{
+    if(!input) return;
+
+    let exp = formatExpression(input).replace(/\^/g,"**");
+    let result = eval(exp);
+
+    if(result!==undefined && result!==Infinity){
+      document.getElementById("preview").innerText =
+      Number(result).toLocaleString();
+    }
+  }catch{
+    document.getElementById("preview").innerText="";
+  }
+}
+
+/* FINAL RESULT */
+
+function calculate(){
+  try{
+    let exp = formatExpression(input).replace(/\^/g,"**");
+    let result = eval(exp);
+    input = result.toString();
+    updateDisplay();
+    document.getElementById("preview").innerText="";
+  }catch{
+    document.getElementById("input").innerText="Error";
+  }
+}
+
 </script>
 
 </body>
