--- a/index.html
+++ b/index.html
@@ -15,32 +15,34 @@ html, body {
   overscroll-behavior:none;
   -webkit-user-select:none;
   user-select:none;
+  overflow:hidden;
 }
 
 .calculator {
+  position:fixed;
+  inset:0;
   display:flex;
   flex-direction:column;
-  height:100vh;
 }
 
 /* DISPLAY */
 
 .display {
   background:#2b262b;
-  padding:25px 20px;
+  padding:22px 20px;
   text-align:right;
-  flex:0 0 24%;
+  flex:0 0 22%;
   display:flex;
   flex-direction:column;
   justify-content:flex-end;
 }
 
 .mainInput {
-  font-size:42px;
+  font-size:40px;
 }
 
 .preview {
-  font-size:26px;
+  font-size:24px;
   opacity:0.7;
   margin-top:6px;
 }
