--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ html, body {
   flex-direction:column;
 }
 
-/* DISPLAY */
+/* DISPLAY (UNCHANGED) */
 
 .display {
   background:#2b262b;
@@ -47,29 +47,30 @@ html, body {
   margin-top:6px;
 }
 
-/* KEYPAD GRID */
+/* KEYPAD GRID (ADJUSTED) */
 
 .keypad {
   flex:1;
   display:grid;
   grid-template-columns:repeat(4,1fr);
-  gap:10px;
-  padding:12px;
+  gap:12px;
+  padding:14px 14px 26px 14px;
 }
 
 button {
   aspect-ratio:1/1;
   border-radius:50%;
   border:none;
-  font-size:24px;
+  font-size:23px;
   color:white;
   background:#1b1b1b;
+  transform:scale(0.94);
 }
 
 .operator { background:#5c525c; }
 .top { background:#4b404b; }
 
-button:active { transform:scale(0.95); }
+button:active { transform:scale(0.88); }
 </style>
 </head>
 
@@ -130,23 +131,17 @@ function press(val){
   liveCalculate();
 }
 
-/* CLEAR */
-
 function clearAll(){
   input="";
   updateDisplay();
   document.getElementById("preview").innerText="";
 }
 
-/* BACKSPACE */
-
 function back(){
   input = input.slice(0,-1);
   updateDisplay();
   liveCalculate();
 }
-
-/* DISPLAY */
 
 function updateDisplay(){
   document.getElementById("input").innerText = input || "0";
@@ -157,11 +152,9 @@ function updateDisplay(){
 function formatExpression(exp){
   exp = exp.replace(/π/g,Math.PI);
   exp = exp.replace(/√/g,"Math.sqrt");
-
   exp = exp.replace(/(\d)\(/g,"$1*(");
   exp = exp.replace(/\)(\d)/g,")*$1");
   exp = exp.replace(/(\d)π/g,"$1*Math.PI");
-
   return exp;
 }
 
@@ -170,10 +163,8 @@ function formatExpression(exp){
 function liveCalculate(){
   try{
     if(!input) return;
-
     let exp = formatExpression(input).replace(/\^/g,"**");
     let result = eval(exp);
-
     if(result!==undefined && result!==Infinity){
       document.getElementById("preview").innerText =
       Number(result).toLocaleString();
@@ -182,8 +173,6 @@ function liveCalculate(){
     document.getElementById("preview").innerText="";
   }
 }
-
-/* FINAL RESULT */
 
 function calculate(){
   try{
@@ -196,8 +185,6 @@ function calculate(){
     document.getElementById("input").innerText="Error";
   }
 }
-
-/* SIGN TOGGLE */
 
 function toggleSign(){
   if(!input) return;
