--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ html, body {
 /* KEYPAD */
 
 .keypad {
-  flex:1;
+  flex:0 0 auto;
   display:grid;
   grid-template-columns:repeat(4,1fr);
   gap:10px;
