--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@ html, body {
 .keypad {
   display:grid;
   grid-template-columns:repeat(4,1fr);
-  gap:6px;
-  padding:22px;
+  gap:10px;
+  padding:12px;
+  align-content:start;
 }
+
 
 /* BUTTONS */
 
