--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ button:active {
     </div>
 
     <div class="keypad">
-        <button class="top" ontouchstart="handleTap(event, '√(')">√</button>
+        <button class="top" ontouchstart="handleTap(event, '√')">√</button>
         <button class="top" ontouchstart="handleTap(event, '%')">%</button>
         <button class="top" ontouchstart="handleTap(event, '^')">^</button>
         <button class="orange-btn" ontouchstart="handleTap(event, 'AC')">AC</button>
@@ -290,19 +290,22 @@ function formatExpression(exp) {
     exp = exp.replace(/÷/g, "/");
     exp = exp.replace(/−/g, "-");
     
-    // NEW: Translator for Square Root
-    // Turns "√(" into "Math.sqrt("
-    exp = exp.replace(/√/g, "Math.sqrt");
+    // 1. Implicit Multiplication for Square Root (2√9 -> 2*√9)
+    exp = exp.replace(/(\d)√/g, "$1*√");
 
-    // Percent logic
+    // 2. Square Root Translation
+    // Always add the open bracket automatically: √ -> Math.sqrt(
+    exp = exp.replace(/√/g, "Math.sqrt(");
+
+    // 3. Percent logic
     exp = exp.replace(/(\d+(?:\.\d+)?)([\+\-])(\d+(?:\.\d+)?)%/g, "$1$2($1*$3/100)");
 
-    // Implicit multiplication
+    // 4. Implicit multiplication
     exp = exp.replace(/(\d)\(/g, "$1*(");
     exp = exp.replace(/\)(\d)/g, ")*$1");
     exp = exp.replace(/%(\d)/g, "%*$1");
 
-    // Standard Percent
+    // 5. Standard Percent
     exp = exp.replace(/%/g, "/100");
 
     return exp;
