--- a/index.html
+++ b/index.html
@@ -293,19 +293,27 @@ function formatExpression(exp) {
     // 1. Implicit Multiplication for Square Root (2√9 -> 2*√9)
     exp = exp.replace(/(\d)√/g, "$1*√");
 
-    // 2. Square Root Translation
-    // Always add the open bracket automatically: √ -> Math.sqrt(
+    // 2. Smart Root Logic (The "Second Logic")
+    // If it finds √ followed by digits (like √2 or √2.5), it wraps JUST THAT number.
+    exp = exp.replace(/√(\d+(\.\d+)?)/g, "Math.sqrt($1)");
+
+    // 3. Explicit Logic
+    // If it finds √ followed by (, it treats it normally.
+    exp = exp.replace(/√\(/g, "Math.sqrt(");
+
+    // 4. Fallback (Safety)
+    // If any lonely √ is left (weird edge case), just treat it as open.
     exp = exp.replace(/√/g, "Math.sqrt(");
 
-    // 3. Percent logic
+    // 5. Percent logic
     exp = exp.replace(/(\d+(?:\.\d+)?)([\+\-])(\d+(?:\.\d+)?)%/g, "$1$2($1*$3/100)");
 
-    // 4. Implicit multiplication
+    // 6. Implicit multiplication
     exp = exp.replace(/(\d)\(/g, "$1*(");
     exp = exp.replace(/\)(\d)/g, ")*$1");
     exp = exp.replace(/%(\d)/g, "%*$1");
 
-    // 5. Standard Percent
+    // 7. Standard Percent
     exp = exp.replace(/%/g, "/100");
 
     return exp;
@@ -315,7 +323,6 @@ function liveCalculate() {
     try {
         let exp = formatExpression(inputData);
 
-        // AUTO-CLOSE BRACKETS
         const open = (exp.match(/\(/g) || []).length;
         const close = (exp.match(/\)/g) || []).length;
         if (open > close) {
